Fixed flash messages. Added delete function for pokemon.
Flash messages were not showing up. Removed the flash.now which does not work for a redirect.
Added initial styling to flash messages. Changed routes to just resources now that there is full crud
functionality. Added destroy method to controller and buttons to pokemon index page.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -111,3 +111,24 @@ Images
   border-radius: 50%;
   margin-top: 40px;
 }
+
+/*-----------------------------------------
+Flashes
+------------------------------------------*/
+
+.flash_message {
+  font-size: 1.5rem !important;
+}
+
+.success {
+  background-color: #81c784;
+}
+
+.danger {
+  background-color: #b71c1c;
+  color: white;
+}
+
+.flash_row {
+  margin-bottom: 0px !important;
+}
